--- a/Epuration_X3.conf
+++ b/Epuration_X3.conf
@@ -1,4 +1,4 @@
-# Exemple de fichier de configuration
+# Exemple de fichier de configuration pour le script Epuration_X3.ps1
 #
 # Seules les lignes débutants par "SMTP:" et "FOLD:" sont traitées.
 #
